fix small issues

--- a/app/views/jobRolesView.html
+++ b/app/views/jobRolesView.html
@@ -22,8 +22,7 @@ There are no Job Roles.
 {% endif %}
 
 {{ govukButton({
-  text: "Home",
-  href: "http://localhost:3000/home"
+  text: "Home"
 }) }}
 
 {% endblock %}
