minor changes in error message and service name

--- a/app/views/jobRolesView.html
+++ b/app/views/jobRolesView.html
@@ -2,7 +2,7 @@
 {% extends "layout_unbranded.html" %}
 
 {% block pageTitle %}
-  GOV.UK page template – {{ serviceName }} – GOV.UK Prototype Kit
+  {{ serviceName }}
 {% endblock %}
 
 {% block content %}
