--- a/app/views/jobRolesView.html
+++ b/app/views/jobRolesView.html
@@ -22,7 +22,8 @@ There are no Job Roles.
 {% endif %}
 
 {{ govukButton({
-  text: "Home"
+  text: "Home",
+  href: '/home'
 }) }}
 
 {% endblock %}
