--- a/app/views/includes/registration.html
+++ b/app/views/includes/registration.html
@@ -5,13 +5,21 @@
 </head> 
 <body> 
 
-    <form action="/api/registeruser" method="post">
+    <script>
+    function checkPassword(str)
+    {
+        var re = /^(?=.*\d)(?=.*[!@#$%^&*])(?=.*[a-z])(?=.*[A-Z]).{8,}$/; 
+        return re.test(str);
+    }
+    </script>
+
+    <form action="/api/registeruser" method="post" onsubmit="return checkPassword(this)">
         
         <label for="email">Email:</label>
-        <input type="text" name="email" value="{{email}}">
+        <input type="email" name="email" value="{{email}}"> <!-- Input type email to validate proper email format-->
         
         <label for="password">Password:</label>
-        <input type="password" name="password" value="{{password}}">
+        <input type="password" name="password" value="{{password}}" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{8,}" title="Must contain at least 8 characters, one upper case and lower case and one special character"> <!-- Pattern regex for password requirements -->
     
         <input type="submit" value="Submit">
     
