--- a/app/views/includes/registration.html
+++ b/app/views/includes/registration.html
@@ -18,9 +18,19 @@
         <label for="email">Email:</label>
         <input type="email" name="email" value="{{email}}"> <!-- Input type email to validate proper email format-->
         
+        <br><br>
+        
         <label for="password">Password:</label>
         <input type="password" name="password" value="{{password}}" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{8,}" title="Must contain at least 8 characters, one upper case and lower case and one special character"> <!-- Pattern regex for password requirements -->
-    
+        
+        <br><br>
+
+        <label for="role">Role:</label>
+        <select name="role" id="role">
+            <option value="admin">Admin</option>
+            <option value="employee">Employee</option>
+        </select>
+
         <input type="submit" value="Submit">
     
     </form> 
