--- a/app/views/jobRolesView.html
+++ b/app/views/jobRolesView.html
@@ -20,7 +20,7 @@
   {% for jobRole in jobRoles %}
     <tr class="govuk-table__row">
       <td id="{{loop.index}}" class="govuk-table__cell">{{jobRole.name}}</td>
-      <td class="govuk-table__cell"><a href={{role.sharepoint_url}} target="_blank">{{jobRole.specification}}</a></td>
+      <td class="govuk-table__cell"><a href={{jobRole.specLink}} target="_blank">{{jobRole.specification}}</a></td>
     </tr>
   {% endfor %}
   </tbody>
