--- a/app/views/jobRolesView.html
+++ b/app/views/jobRolesView.html
@@ -32,9 +32,7 @@ There are no Job Roles.
 {% endif %}
 
 {{ govukButton({
-  text: "Home"
+  text: "Home",
+  href: "http://localhost:3000/home"
 }) }}
 {% endblock %}
-
-
-
