--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-<head> 
-<title>Registration</title> 
-</head> 
-<body> 
+{% from "govuk/components/table/macro.njk" import govukTable %}
+{% extends "layout_unbranded.html" %}
+{% from "govuk/components/select/macro.njk" import govukSelect %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
+
+{% block pageTitle %}
+  {{ Registration }}
+{% endblock %}
+
+{% block content %}
+
 
     <script>
     function checkPassword(str)
@@ -16,12 +21,12 @@
     <form action="/registeruser" method="post">
         
         <label for="email">Email:</label>
-        <input type="email" name="email" value="{{email}}" pattern=".+@kainos\.com" title="Please use a valid Kainos email address."> <!-- Input type email to validate proper email format-->
+        <input type="email" name="email" value="{{email}}" pattern=".+@kainos\.com" title="Please use a valid Kainos email address." required> <!-- Input type email to validate proper email format-->
         
         <br><br>
         
         <label for="password">Password:</label>
-        <input type="password" name="password" value="{{password}}" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{9,}" title="Password must contain more than 8 characters, one upper case and lower case letter and one special character"> <!-- Pattern regex for password requirements -->
+        <input type="password" name="password" value="{{password}}" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{9,}" title="Password must contain more than 8 characters, one upper case and lower case letter and one special character" required> <!-- Pattern regex for password requirements -->
         
         <br><br>
 
@@ -35,6 +40,70 @@
     
     </form> 
 
+    {% from "govuk/components/input/macro.njk" import govukInput %}
+    {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
+    
+    <form action="/registeruser" method="post">
 
-</body> 
-</html>
+    {% call govukFieldset({
+      legend: {
+        text: "Registration Details",
+        classes: "govuk-fieldset__legend--l",
+        isPageHeading: true
+      }
+    }) %}
+    
+      {{ govukInput({
+        label: {
+          text: 'Email'
+        },
+        id: "email",
+        name: "email",
+        type: "email",
+        pattern: ".+@kainos\.com",
+        autocomplete: "email"
+      }) }}
+    
+      {{ govukInput({
+        label: {
+          text: 'Password'
+        },
+        id: "password",
+        name: "password",
+        type: "password",
+        pattern: "(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{9,}",
+        autocomplete: "password"
+      }) }}
+    
+      {{ govukSelect({
+        id: "role",
+        name: "role",
+        label: {
+          text: "Role"
+        },
+        items: [
+          {
+            value: "employee",
+            text: "Employee",
+            selected: true
+          },
+          {
+            value: "admin",
+            text: "Admin"
+          }
+
+        ]
+
+
+      }) }}
+
+      {{ govukButton({
+        text: "Register",
+        type: "Submit"
+      }) }}
+
+      </form>
+    {% endcall %}
+
+    {% endblock %}
+
