--- a/app/views/jobRolesView.html
+++ b/app/views/jobRolesView.html
@@ -16,6 +16,7 @@
       <th scope="col" class="govuk-table__header">Specification</th>
       <th scope="col" class="govuk-table__header">Specification Link</th>
       <th scope="col" class="govuk-table__header">Capability</th>
+      <th scope="col" class="govuk-table__header">Band</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
@@ -25,6 +26,7 @@
       <td class="govuk-table__cell">{{jobRole.specification}}</td>
       <td class="govuk-table__cell"><a href={{jobRole.specLink}} target="_blank">View Specification</a></td>
       <td class="govuk-table__cell">{{jobRole.capability}}</td>
+      <td class="govuk-table__cell">{{jobRole.band}}</td>
     </tr>
   {% endfor %}
   </tbody>
