Fixed home link and removed comments

--- a/app/views/jobResponsibility.html
+++ b/app/views/jobResponsibility.html
@@ -27,6 +27,7 @@ There are no responsibilities for this job.
 {% endif %}
 
 {{ govukButton({
-  text: "Home"
+  text: "Home",
+  href: '/home'
 }) }}
 {% endblock %}
