--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -4,7 +4,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block pageTitle %}
-  {{ Registration }}
+  Registration
 {% endblock %}
 
 {% block content %}
