--- a/app/views/jobRolesViewAdmin.html
+++ b/app/views/jobRolesViewAdmin.html
@@ -23,11 +23,8 @@
   <tbody class="govuk-table__body">
   {% for jobRole in jobRoles %}
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="javascript:window.location.href=window.location.href" 
-        onclick="return confirm('This action cannot be undone. Are you sure you want to delete {{ jobRole.name }}?')" action="/jobRolesAdmin:roleId" method="delete">DELETE</a></td>
-
-
-      <td id="{{loop.index}}" class="govuk-table__cell"><a href="jobResponsibility/{{jobRole.roleId}}" target="_blank">{{ jobRole.name }}</a></td>
+      <td class="govuk-table__cell"><a href="/adminDelete/{{jobRole.roleId}}" onclick="return confirm('This action cannot be undone. Are you sure you want to delete {{ jobRole.name }}?')">DELETE</a></td>
+      <td id="{{loop.index}}" class="govuk-table__cell"><a href="/jobResponsibility/{{jobRole.roleId}}" target="_blank">{{ jobRole.name }}</a></td>
       <td class="govuk-table__cell">{{jobRole.specification}}</td>
       <td class="govuk-table__cell"><a href={{jobRole.specLink}} target="_blank">View Specification</a></td>
       <td class="govuk-table__cell">{{jobRole.capability}}</td>
