--- a/app/views/jobResponsibility.html
+++ b/app/views/jobResponsibility.html
@@ -6,18 +6,14 @@
 {% endblock %}
 
 {% block content %}
-{% for resp in jobResponsibilty %}
-  {% if loop.index <=1%}
-    <h2>The {{resp.name}} Responsibilities</h2> 
-  {% endif %}
-{% endfor %}
+  <h2>The {{jobResponsibilty.name}} Responsibilities</h2> 
 
-{% if jobResponsibilty and jobResponsibilty.length > 0 %} 
+{% if jobResponsibilty.responsibility and jobResponsibilty.responsibility.length > 0 %} 
 <table class="govuk-table">
   <tbody class="govuk-table__body">
-  {% for resp in jobResponsibilty %}
+  {% for resp in jobResponsibilty.responsibility %}
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell">{{resp.responsibility}}</td>
+      <td class="govuk-table__cell">{{resp}}</td>
     </tr>
   {% endfor %}
   </tbody>
