--- a/app/views/layout_unbranded.html
+++ b/app/views/layout_unbranded.html
@@ -7,7 +7,26 @@
 {% block head %}
   <!--[if lte IE 8]><link href="/public/stylesheets/unbranded-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
   <!--[if gt IE 8]><!--><link href="/public/stylesheets/unbranded.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
+  <img src="/public/images/kainosLogo.png" alt="kainos logo" id="kainos_logo">
 {% endblock %}
 
 {% block header %}{% endblock %}
-{% block footer %}{% endblock %}
+
+{% block footer %}
+<div class="govuk-footer">
+  <div class="footer__bottom">
+    <div class="footer__container footer__container--image container">
+      <div class="footer__slogan">
+        <b>Thinking</b>
+        <span>beyond</span>
+        <b>limitations</b>
+      </div>
+    </div>
+  </div>
+  <div class="floatingImage">
+    <img src="/public/images/footerImage.webp" id = "footerImageKainos">
+  </div>
+  
+ <div class="footer__copyrights">Copyright © 2021 Kainos. Registered in NI NI019370</div>
+ 
+</div>{% endblock %}
