--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -5,17 +5,17 @@
 {% endblock %}
 
 {% block content %}
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-
-      <h1 class="govuk-heading-l">
-        Possible actions:
+      <h1 class="govuk-heading-xl">
+        Home Page
       </h1>
+      <h2 class="govuk-heading-m">
+        Possible actions:
+      </h2>
 
       <p><a href="/jobRoles">View job roles table</a></p>
 
     </div>
   </div>
-
-{% endblock %}
+{% endblock %}a
