--- a/app/views/jobRolesView.html
+++ b/app/views/jobRolesView.html
@@ -6,7 +6,13 @@
 {% endblock %}
 
 {% block content %}
-<h2>List of Job Roles</h2> 
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-xl">
+      Job Roles
+    </h1>
+  </div>
+</div>
 
 {% if jobRoles and jobRoles.length > 0 %} 
 <table class="govuk-table">
