--- a/app/views/jobRolesViewAdmin.html
+++ b/app/views/jobRolesViewAdmin.html
@@ -8,11 +8,16 @@
 {% block content %}
 <h2>List of Job Roles</h2> 
 
+{# Here we should check information about current user. If its admin (1) then delete column will be visible. Currently Im changing that manually #}
+{% set user = 1 %}
+
 {% if jobRoles and jobRoles.length > 0 %} 
 <table class="govuk-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header">Delete role</th>
+        {% if user == 1 %} 
+        <th scope="col" class="govuk-table__header"> Delete role </th>
+        {% endif %}
       <th scope="col" class="govuk-table__header">Job Role</th>
       <th scope="col" class="govuk-table__header">Specification</th>
       <th scope="col" class="govuk-table__header">Specification Link</th>
@@ -23,7 +28,10 @@
   <tbody class="govuk-table__body">
   {% for jobRole in jobRoles %}
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="/adminDelete/{{jobRole.roleId}}" onclick="return confirm('This action cannot be undone. Are you sure you want to delete role &quot;{{ jobRole.name }}&quot;?')">DELETE</a></td>
+        {% if user == 1 %} 
+        <td id = "deleteOption" class="govuk-table__cell"><a href="/adminDelete/{{jobRole.roleId}}" onclick="return confirm('This action cannot be undone. Are you sure you want to delete role &quot;{{ jobRole.name }}&quot;?')">
+          DELETE </a></td>
+        {% endif %}
       <td id="{{loop.index}}" class="govuk-table__cell"><a href="/jobResponsibility/{{jobRole.roleId}}" target="_blank">{{ jobRole.name }}</a></td>
       <td class="govuk-table__cell">{{jobRole.specification}}</td>
       <td class="govuk-table__cell"><a href={{jobRole.specLink}} target="_blank">View Specification</a></td>
