--- a/app/views/jobRolesView.html
+++ b/app/views/jobRolesView.html
@@ -38,7 +38,9 @@
   </tbody>
 </table>
 {% else %}
-There are no Job Roles. 
+<h1 class="govuk-heading-m">
+  There are no job roles. 
+</h1>
 {% endif %}
 
 {{ govukButton({
