--- a/app/views/competenciesView.html
+++ b/app/views/competenciesView.html
@@ -7,7 +7,13 @@
 
 {% block content %}
 {% if competencies and competencies.length > 0 %} 
-<h2>{{competencies[0].name}} competencies</h2> 
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-xl">
+      {{competencies[0].name}} competencies
+    </h1>
+  </div>
+</div>
 <table class="govuk-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
@@ -41,9 +47,10 @@
   {% endfor %}
   </tbody>
 </table>
-
 {% else %}
-There are no competencies. 
+<h1 class="govuk-heading-m">
+  There are no competencies.  
+</h1>
 {% endif %}
 
 {{ govukButton({
