Consistency with DB

--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -55,12 +55,12 @@
         },
         items: [
           {
-            value: "employee",
+            value: "Employee",
             text: "Employee",
             selected: true
           },
           {
-            value: "admin",
+            value: "Admin",
             text: "Admin"
           }
 
