--- a/app/views/jobRolesViewAdmin.html
+++ b/app/views/jobRolesViewAdmin.html
@@ -6,7 +6,13 @@
 {% endblock %}
 
 {% block content %}
-<h2>List of Job Roles</h2> 
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-xl">
+      Job Roles
+    </h1>
+  </div>
+</div>
 
 {# Here we should check information about current user. If its admin (1) then delete column will be visible. Currently Im changing that manually #}
 {% set user = 1 %}
