Fix routing issues, login confirmation page to meet requirements

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -50,7 +50,7 @@
 
 
         {{ govukCheckboxes({
-        idPrefix: "remembeMer",
+        idPrefix: "rememberMe",
         name: "rememberMe",
         fieldset: {
             legend: {
