Update homepage links

--- a/app/views/login-confirmation.html
+++ b/app/views/login-confirmation.html
@@ -36,6 +36,15 @@
 
     </form>
 
+    <form action="/homeView" method="get">
+
+        {{ govukButton({
+            text: "Home Page",
+            type: "Submit"
+          }) }}
+    
+        </form>
+
     {% endcall %}
 
 
