--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -14,6 +14,8 @@
       </h1>
 
       <p><a href="/jobRoles">View job roles table</a></p>
+      <p><a href="/registration">Register an Account</a></p>
+      <p><a href="/login">Log In</a></p>
 
     </div>
   </div>
