--- a/app/views/jobRolesViewAdmin.html
+++ b/app/views/jobRolesViewAdmin.html
@@ -42,7 +42,7 @@
       <td class="govuk-table__cell">{{jobRole.specification}}</td>
       <td class="govuk-table__cell"><a href={{jobRole.specLink}} target="_blank">View Specification</a></td>
       <td class="govuk-table__cell">{{jobRole.capability}}</td>
-      <td class="govuk-table__cell">{{jobRole.band}}</td>
+      <td class="govuk-table__cell"><a href=/competencies/{{jobRole.band}} target="_blank">{{jobRole.band}}</a></td>
     </tr>
   {% endfor %}
   </tbody>
